@@ -653,13 +653,13 @@ AC_ARG_ENABLE(embedded-perl,--enable-embedded-perl will enable embedded Perl int
 	]
 	,USEPERL=no)
 
-PERLCACHE=no;
+PERLCACHE=yes;
 AC_ARG_WITH(perlcache,--with-perlcache turns on cacheing of internally compiled Perl scripts,[
 	PERLCACHE=$withval
 	]
 	,[
 	AC_DEFINE(DO_CLEAN,"1")
-	PERLCACHE=no;
+	PERLCACHE=yes;
 	])
 
 dnl Is embedded Perl being compiled in?
